# mujoco_push

./: README.md  main.py  model.xml  pyproject.toml
src/mujoco_push/: __init__.py  controllers.py  get_vel.py  gym_env.py  main.py  main2.py  main3.py  robot_push.py  small_demo.py  utils.py
src/mujoco_push/xml_models/: model.xml  vel.xml
