[project]
name = "mujoco_push"
version = "0.0.1"
description = "simplest example in the python world"
license = { text="MIT" }
dependencies = []

[project.urls]
homepage = "https://github.com/gdamjan/hello-world-python-package"
repository = "https://github.com/gdamjan/hello-world-python-package"

# [tool.setuptools]
# # data to be included is specified in MANIFEST.in
# include-package-data = true

# [tool.setuptools.packages.find]
# where = {"src"}

[tool.setuptools.package-data]
"mujoco_push.xml_models" = ["*.xml"]

# [tool.setuptools.package-data]
# mypkg = ["*.txt"]
# "mypkg.data" = ["*.rst"]



[project.optional-dependencies]
tests = [
  "coverage",
  "pytest",
]
ci = [
  "black",
  "flake8",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
